Coverity analysis defect 101970: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.13
    • Affects Version/s: None
    • Component/s: Security
    • Fully Compatible
    • ALL
    • Platforms 2017-09-11
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Use of an uninitialized variable

      Defect 101970 (STATIC_C)
      Checker UNINIT (subcategory none)
      File: /src/mongo/db/modules/enterprise/src/ldap/connections/openldap_connection.cpp
      Function mongo::<unnamed>::LDAPOptionAPIInfo::makeDefaultInParam()
      /src/mongo/db/modules/enterprise/src/ldap/connections/openldap_connection.cpp, line: 213
      Declaring variable "info" without initializer.

                  Type info;
      

      /src/mongo/db/modules/enterprise/src/ldap/connections/openldap_connection.cpp, line: 215
      Using uninitialized value "info". Field "info.ldapai_api_version" is uninitialized.

                  return info;
      

            Assignee:
            Henrik Edin
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: