SERVER-30608 Initialize variable in makeDefaultInParam

GitOrigin-RevId: 42ab9939c45a0c2ae10d92fb33648aeb312a6e46